# msgspec-ext

./: .pre-commit-config.yaml  profile_settings.py  pyproject.toml
.github/workflows/: merge-bot.yml
benchmark/: benchmark_cold_warm.py
src/msgspec_ext/: settings.py
